--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "material-react-table": "^2.12.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
